# nomsable

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  flake.nix  manage.py  nomsable.cfg.template  pyproject.toml  requirements.txt
accounts/: forms.py  helper.py  models.py  urls.py  views.py
accounts/migrations/: 0001_user.py  0002_invitecode.py  0003_alter_invitecode_expires_userpreferences.py
accounts/templates/accounts/: preferences_index.html
accounts/templates/registration/: login.html  signup.html
accounts/views/: auth.py  preferences.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_recipe.py  0001_user.py  0002_recipe.py  0002_remove_recipeingredient_unit.py
core/templates/core/: 404.html  about.html  detail.html  edit.html  home.html  new.html  recipe.html  search.html
core/templatetags/: serve_duration.py
nomsable/: asgi.py  settings.py  urls.py  wsgi.py
nomsable/templates/: base.html  base_with_navbar.html
scripts/: docker-entrypoint.sh
static/: base.css
static/milligram/: _Base.sass  _Color.sass  _Grid.sass
