[tool.poetry]
name = "nomsable"
version = "0.0.0"
description = "nomsable is an application for parsing, storage, management, editing and display of schema.org recipe"
authors = ["Leona Maroni <dev@leona.is>", "Jana Marie Hemsing <janamarie@janamarie.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.0"
django-compressor = "^4.1"
django-libsass = "^0.9"
isodate = "^0.6"
requests = "^2.28"
beautifulsoup4 = "^4.11.1"
setuptools = ">=60.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
